[package]
name = "socks5_tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tunnel"
path = "src/bin/main_tunnel.rs"

[dependencies]
log = "0.4.20"
log4rs = "1.2.0"
tokio = { version = "1.32.0", features = ["full"] }
